--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,1 +1,13 @@
 noPermission: "&8» &cNie masz wymaganych uprawnień!"
+noPlayer: "&8» &cTylko gracz na serwerze może wykonać tę komendę!"
+playerIsOffline: "&8» &cNie ma takiego gracza na serwerze!"
+command:
+  info:
+    self:
+      - '&e» &7Posiadasz obecnie &e{LEVEL} &7poziom (&e{EXP} EXP&7)'
+      - '&e» &7Potrzebujesz &e{REQUIRED_EXP} EXP&7, aby awansować na kolejny poziom!'
+    other:
+      - '&e» &7Gracz {PLAYER} posiada &e{LEVEL} &7poziom (&e{EXP} EXP&7)'
+      - '&e» &7Potrzebuje &e{REQUIRED_EXP} EXP&7, aby awansować na kolejny poziom!'
+    use:
+      - "&c» &7Poprawne użycie &e/exp info [NICK]"
