--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,7 @@ version: '${project.version}'
 main: pl.dream.dexpmanager.DExpManager
 api-version: '1.20'
 authors: [DreaMPL]
+depend:
+  - DreamLib
+commands:
+  exp:
