--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -3,6 +3,8 @@ noPlayer: "&8» &cTylko gracz na serwerze może wykonać tę komendę!"
 playerIsOffline: "&8» &cNie ma takiego gracza na serwerze!"
 NaN: "&8» &cWprowadzona wartość nie jest liczbą!"
 lessThanZero: "&8» &cWprowadzona wartość może być liczbą ujemną!"
+notEnoughLevel: "&8» &cNie posiadasz wystarczającego poziomu!"
+notEnoughExp: "&8» &cNie posiadasz tylu punktów doświadczenia!"
 command:
   info:
     self:
@@ -15,3 +17,6 @@ command:
   set:
     use: "&c» &7Poprawne użycie &e/exp set [NICK] [liczba]/[poziom]L"
     success: "&c» &7Ustawiłeś ilość punktów doświadczenia graczowi &e{PLAYER}&7! Poziom: &e{LEVEL} ({EXP})"
+  give:
+    use: "&c» &7Poprawne użycie &e/exp give [NICK] [liczba]/[poziom]L/max"
+    success: "&c» &7Przekazałeś &e{EXP} &7punktów doświadczenia graczowi &e{PLAYER}&7!"
