Finished a Store sub command

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -5,6 +5,8 @@ NaN: "&8» &cWprowadzona wartość nie jest liczbą!"
 lessThanZero: "&8» &cWprowadzona wartość może być liczbą ujemną!"
 notEnoughLevel: "&8» &cNie posiadasz wystarczającego poziomu!"
 notEnoughExp: "&8» &cNie posiadasz tylu punktów doświadczenia!"
+notEnoughItem: "&8» &cNie posiadasz wymaganych przedmiotów! Potrzebujesz &eSzklanej butelki&7."
+notEnoughMoney: "&8» &cNie posiadasz wystarczającej ilości pieniędzy. Potrzebujesz &a{MONEY}$&7."
 command:
   info:
     self:
