--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -7,6 +7,7 @@ notEnoughLevel: "&8» &cNie posiadasz wystarczającego poziomu!"
 notEnoughExp: "&8» &cNie posiadasz tylu punktów doświadczenia!"
 notEnoughItem: "&8» &cNie posiadasz wymaganych przedmiotów! Potrzebujesz &eSzklanej butelki&7."
 notEnoughMoney: "&8» &cNie posiadasz wystarczającej ilości pieniędzy. Potrzebujesz &a{MONEY}$&7."
+storageItemUse: "&8» &7Otrzymałeś &e{EXP} &7punktów doświadczenia."
 command:
   info:
     self:
